cluster/apps/monitoring/tools/speedtest-tracker/speedtest-tracker-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: speedtest-tracker-service
  namespace: monitoring
  labels:
    app: speedtest-tracker
spec:
  selector:
    app: speedtest-tracker
  type: ClusterIP
  ports:
  - name: http-web
    port: 80
    targetPort: 80
    protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest-tracker-deployment
  namespace: monitoring
  labels:
    app: speedtest-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: speedtest-tracker
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: speedtest-tracker
    spec:
      nodeSelector:
        node-type: worker
      containers:
      - name: speedtest-tracker-container
        image: henrywhitaker3/speedtest-tracker:latest-arm
        imagePullPolicy: IfNotPresent
        ports:
        - name: http-web
          containerPort: 80
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /config
      restartPolicy: Always
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: speedtest-tracker-config-pvc
        # emptyDir:
        #   medium: Memory
